--- a/app/views/cafe/index.html.erb
+++ b/app/views/cafe/index.html.erb
@@ -1,1 +1,15 @@
-<h1>Hello World</h1>
+<h1>Welcome to Coder Cafe</h1>
+
+
+<table>
+  <tr>
+    <th>Table</th>
+    <th>Price</th>
+  </tr>
+  <% @menu.each do |key, value| %>
+    <tr>
+      <td><%= key.capitalize %></td>
+      <td>$<%= "%.2f" % value %></td>
+    </tr>
+  <% end %>
+</table>
