--- a/app/views/cafe/index.html.erb
+++ b/app/views/cafe/index.html.erb
@@ -8,8 +8,8 @@
   </tr>
   <% @menu.each do |key, value| %>
     <tr>
-      <td><%= key.capitalize %></td>
-      <td>$<%= "%.2f" % value %></td>
+      <td><%= link_to key.capitalize, order_path(key) %></td>
+      <!-- <td>$<%= "%.2f" % value %></td> -->
     </tr>
   <% end %>
 </table>
